[tool.poetry]
name = "cnvm"
version = "0.1.0"
description = "Implementation of the Continuous-time Noisy Voter Model (CNVM)."
license = "GPL-3.0-or-later"
authors = ["Marvin Lücke"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.21"
numba = ">=0.55"
networkx = ">=2.8.4"
scipy = ">=1.9.3"
matplotlib = ">=3.5.3"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

